--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -13,7 +13,9 @@ A partir de entonces, se han realizado un gran despliegue de modelos para descri
 
 La belleza de estas aproximaciones numéricas, es que, conforme la potencia de los dispositivos va incrementando, a la par que los métodos numéricos, las gráficas y distintos tipos de archivos que podemos crear a partir de las mismas, mejorarán de forma significativa.\\
 
-Retomando la ecuación de onda, nos encontramos con diversos métodos numéricos utilizados, como el método de las diferencias finitas \citep{Finitedifference}, el de los elementos finitos \citep{FiniteElements}, o los métodos espectrales \citep{NumericalModels}.\\
+Retomando la ecuación de onda, nos encontramos con diversos métodos numéricos utilizados, como el método de las diferencias finitas \citep{Finitedifference}, el de los elementos finitos \citep{FiniteElements}, o los métodos espectrales \citep{NumericalModels}. Para todos estos métodos, los conceptos de estabilidad y convergencia serán de especial importancia.\\
+
+Si un método carece de estabilidad, querrá decir, que es posible obtener aproximaciones que crezcan indefinidamente y por tanto, los resultados obtenidos no tendrán sentido físico. Por otro lado, que el método no sea convergente, resulta en aproximaciones que no se acercarán a la solución exacta, lo que implica no serán confiables, esto se medirá utilizando el orden de convergencia del método.\\  
 
 
 Nosotros nos centraremos en dar una visión general de la resolución de la ecuación de onda, utilizando el método de las diferencias finitas anteriormente mencionado.\\
