--- a/FicherosTFG/05conclusiones.tex
+++ b/FicherosTFG/05conclusiones.tex
@@ -9,9 +9,9 @@ Se ha contextualizado la ecuación en derivadas parciales de onda, utilizando una
 
 Una vez hecho esto, hemos examinado la solución numérica de la ecuación de onda mediante el método de las diferencias finitas, observando en \ref{sec:soluciones}, como se obtienen buenos resultados para la misma. Hemos comparado distintas condiciones iniciales que cumplen con los parámetros obtenidos mediante el análisis de Von Neumann \ref{sec:VonNeumann} y hemos conseguido archivos de audio que corroboran la estabilidad dentro del marco obtenido.\\
 
-Por otro lado, hemos logrado la implementación de las soluciones de tipo onda viajera \ref{sec:solondaviajera}, de las que derivamos que la suma de las mismas describe inequívocamente el movimiento de la cuerda de nuestro esquema.\\
+Por otro lado, hemos logrado la implementación de las soluciones de tipo onda viajera \ref{sec:solondaviajera}, de las que derivamos que la suma de las mismas describe inequívocamente el movimiento de la cuerda del esquema estudiado.\\
 
-A continuación hemos representado la relación entre la condición CFL y la inestabilidad de las soluciones, observando como su incumplimiento llava a una aproximación muy mala que presenta multitud de oscilaciones espúreas.\\
+A continuación hemos representado la relación entre la condición CFL y la inestabilidad de las soluciones, observando como su incumplimiento lleva a una aproximación muy mala que presenta multitud de oscilaciones espúreas.\\
 
 En definitiva, hemos podido realizar un estudio general de la ecuación de onda en derivadas parciales, abordando desde los conceptos fundamentales hasta la comprobación de como las condiciones teóricas encontradas afectan la solución numérica de la misma.\\
 
