--- a/FicherosTFG/TFGPrincipal.tex
+++ b/FicherosTFG/TFGPrincipal.tex
@@ -41,17 +41,15 @@
 \textsignaturecandidate{Firma de la alumna}   %%% XXX  Poner alumno o alumna según proceda
 \textsignatureadvisor{Firma de los tutores}    %%% XXX  Poner tutor o tutora según proceda
 \cityofbirth{Puerto Real, Cádiz}
-\degreedate{Junio de 2.023}
+\degreedate{Junio de 2023}
 % ----------------------------------------------------------------------
 
 % Evita los pesados overfull y underfull
 \hbadness=10000
 \hfuzz=50pt
 
-
-
+\usepackage{mathrsfs}
 \begin{document}
-
 
 % Pone doble espacio
 \renewcommand\baselinestretch{1.1}
@@ -77,6 +75,7 @@
 \selectlanguage{spanish}
 
 %: ----------------------- Preliminares ------------------------
+
 
 \frontmatter
 
