--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -256,22 +256,35 @@ language={English},
 }
 
 @book{Finitedifference,
-
 author={Thomas,J. W.},
-
 year={1995},
-
 title={Numerical partial differential equations: Finite difference methods},
-
 publisher={Springer},
-
 volume={22},
-
 keywords={Ecuaciones diferenciales},
-
 isbn={0387979999;9780387979991;}
 
 }
+@book{leveque, 
+title={Finite Volume Methods for Hyperbolic Problems}, 
+DOI={10.1017/CBO9780511791253}, 
+publisher={Cambridge University Press}, 
+author={LeVeque, Randall J.}, 
+year={2002}, 
+collection={Cambridge Texts in Applied Mathematics}}
+
+
+@book{ScienceSound,
+  title={The Science of Sound},
+  author={Rossing, T.D. and Wheeler, P.A. and Moore, F.R.},
+  isbn={9780805385656},
+  lccn={00105399},
+  series={Addison-Wesley series in physics},
+  url={https://books.google.es/books?id=kLDvAAAAMAAJ},
+  year={2002},
+  publisher={Addison Wesley}
+}
+
 
 @comment{jabref-meta: selector_publisher:}
 
